--- a/app/src/main/res/layout/activity_task1_layout.xml
+++ b/app/src/main/res/layout/activity_task1_layout.xml
@@ -5,130 +5,132 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="24dp"
     tools:context=".task1_layout">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:contentDescription="@string/info_icon_content_description"
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_info_details" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="@string/uplan_title"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/loginCard"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/title">
 
-        <TextView
-            android:id="@+id/userid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/userid_text"
-            tools:layout_editor_absoluteX="175dp"
-            tools:layout_editor_absoluteY="51dp"
-            tools:ignore="MissingConstraints" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/info_icon_content_description"
-            app:srcCompat="@android:drawable/ic_menu_info_details"
-            tools:layout_editor_absoluteX="387dp"
-            tools:layout_editor_absoluteY="1dp"
-            tools:ignore="MissingConstraints" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:minHeight="48dp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="0dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="24dp">
 
             <TextView
-                android:id="@+id/password"
+                android:id="@+id/userid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/password_subtext"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="176dp"
-                tools:layout_editor_absoluteY="332dp" />
+                android:text="@string/userid_text"
+                android:textAllCaps="true"
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/useridedit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="username"
-                android:ems="10"
                 android:hint="@string/name_hint"
                 android:inputType="text"
-                android:minHeight="48dp"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="100dp"
-                tools:layout_editor_absoluteY="354dp" />
+                android:minHeight="48dp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="16dp" />
 
             <TextView
-                android:id="@+id/helperText"
+                android:id="@+id/password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/forgot_password"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="134dp"
-                tools:layout_editor_absoluteY="444dp" />
-
-            <Button
-                android:id="@+id/register"
-                android:layout_width="112dp"
-                android:layout_height="48dp"
-                android:text="@string/register_button_text"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="163dp"
-                tools:layout_editor_absoluteY="588dp" />
+                android:text="@string/password_subtext"
+                android:textAllCaps="true"
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/passwordedit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="password"
-                android:ems="10"
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
-                android:minHeight="48dp"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="100dp"
-                tools:layout_editor_absoluteY="399dp" />
-
-            <View
-                android:id="@+id/divider"
-                android:layout_width="wrap_content"
-                android:layout_height="1dp"
-                android:background="#888888"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="316dp" />
+                android:minHeight="48dp" />
 
             <CheckBox
                 android:id="@+id/rememberMe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/remember_me"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="154dp"
-                tools:layout_editor_absoluteY="463dp" />
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/uplan_title"
-                android:textSize="105sp"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="64dp"
-                tools:layout_editor_absoluteY="67dp" />
+                android:layout_marginTop="8dp"
+                android:text="@string/remember_me" />
 
             <Button
                 android:id="@+id/signin"
-                android:layout_width="105dp"
-                android:layout_height="48dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:padding="12dp"
                 android:text="@string/signin_button_text"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="163dp"
-                tools:layout_editor_absoluteY="511dp" />
+                app:cornerRadius="8dp" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/helperText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:text="@string/forgot_password"
+                android:textColor="?attr/colorPrimary" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="32dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintTop_toBottomOf="@id/loginCard" />
+
+    <Button
+        android:id="@+id/register"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/register_button_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
